--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Quiz Engine</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+
+  <link rel="icon" href="">
+  <title>Quiz Engine</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Libraries CSS Files -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
-<body>
 
-<h1>This is a Quiz Engine</h1>
+      <body>
+      <div class = 'container-tiny text-center'>
+      <h1>This is a Quiz Engine Template</h1>
 
-</body>
+      <p>
+        Description
+      </p>
+      </div>
+
+      <div class = 'top-right'>
+        <p>
+          Quote: €5000
+        </p>
+      </div>
+
+      <script src="./app.js"></script>
+      </body>
+
+
 </html>
+
+  <!--
+
+  Quiz Engine
+-------------
+1. Create a question template that has its own unique route,
+It should have a question title and then a further descriptive detail underneath,
+a list of clickable answers, a summarized total of the quote so far, current page & total number of pages.
+
+2. Each Answer should have an image of a specified size and a title.
+
+3. Results page should have a shareable link, that is built up using the decisions made by taking the quiz and the same quote value.
+
+
+  -->
