added template images and text

--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,48 @@
 </head>
 
       <body>
-      <div class = 'container-tiny text-center'>
-      <h1>This is a Quiz Engine Template</h1>
 
-      <p>
-        Description
-      </p>
+      <div class="container-fluid text-center">
+        <div class="jumbotron">
+          <h1>This is a Quiz Engine Template</h1>
+        </div>
+
+        <h2>Question 1 Title</h2>
+        <p>Description of question 1</p>
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <div class="top-center text-dark">Answer 1 Text</div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <div class="top-center text-dark">Answer 2 Text</div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <div class="top-center text-dark">Answer 3 Text</div>
+            </a>
+        </div>
+
       </div>
+    </div>
 
       <div class = 'top-right'>
         <p>
           Quote: €5000
+        </p>
+      </div>
+
+      <div class = 'top-left'>
+        <p>
+          Page: 1 out of 10.
         </p>
       </div>
 
