planning to add results section

--- a/public/index.html
+++ b/public/index.html
@@ -32,33 +32,43 @@
 
         <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
             <a class="thumbnail" href="#">
-                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <img class="img-responsive" src="http://placehold.it/400x300" alt="" height="300" width="400">
                 <div class="top-center text-dark">Answer 1 Text</div>
             </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
             <a class="thumbnail" href="#">
-                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <img class="img-responsive" src="http://placehold.it/400x300" alt="" height="300" width="400">
                 <div class="top-center text-dark">Answer 2 Text</div>
             </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-4 thumb img-grow">
             <a class="thumbnail" href="#">
-                <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+                <input type="checkbox" id="cb2" />
+                <label for="cb2"><img class="img-responsive" src="http://placehold.it/400x300" alt="" height="300" width="400"></label>
                 <div class="top-center text-dark">Answer 3 Text</div>
             </a>
         </div>
+
+
+
 
       </div>
     </div>
 
       <div class = 'top-right'>
         <p>
-          Quote: €5000
+          Quote: €0
         </p>
       </div>
 
       <div class = 'top-left'>
+        <p>
+          < - Previous Question
+        </p>
+      </div>
+
+      <div class = 'bottom-right'>
         <p>
           Page: 1 out of 10.
         </p>
